--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sign-up-porject",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "scripts.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
