--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sign-up-porject",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,9 @@
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "request": "^2.88.2"
   }
 }
