--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+# Ignore node_modules directory
+node_modules/
+
+# Ignore environment variables file
 .env
-/node_modules
+
+# Ignore build artifacts
+dist/
+build/
+
+# Ignore IDE-specific files
+.vscode/
+.idea/
+
+# Ignore log files
+*.log
+
+# Ignore dependency lock files
+package-lock.json
+yarn.lock
+
+# Ignore compiled JavaScript files
+*.js
+
+# Ignore user-specific files
+.DS_Store
